--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,29 +1,29 @@
 <% provide(:title,"About")%>
-
 <ul class="nav nav-tabs">
-	
-  <li class="nav-item">
-      <a class="nav-link active" href="#">HTML</a>
-  </li>
-  
-  <li class="nav-item">
-    <a class="nav-link" href="#">CSS</a>
-  </li>
-  
-  <li class="nav-item">
-    <a class="nav-link" href="#">JavaScript</a>
-  </li>
-  
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-    Preview
-    </a>
-    
-    <div class="dropdown-menu" aria-labelledby="Preview">
-      <a class="dropdown-item" href="#">Mobile Phone</a>
-      <a class="dropdown-item" href="#">Tablet</a>
-      <a class="dropdown-item" href="#">Laptop</a>
-      <a class="dropdown-item" href="#">Desktop</a>
-    </div>
+	<li class="nav-item">
+      <a class="nav-link active" href="#">Hi there!</a>
   </li>
 </ul>
+<br>
+<p>
+  Thank you for droppin' by!
+  <br>
+  <br>
+  I am sure you are curious by now what this app is all about. 
+  Well, guess what? I did it! 
+  <br>  
+  Yup, you read it right. This is my awesome blog project. So I started learning Ruby on Rails. 
+  <br>  
+  <br>
+  Quite a challenge, an interesting adventure I could say.
+  <br>
+  <br>
+  My name is Mari Sato!  <br> It's nice to meet you by the way.
+  <br>
+  -- About Mari
+  <br>
+  <br>
+  Thanks for reading.
+  <br>
+  Let's keep in touch. Click CONTACT to learn how to reach me. 
+</p>
