--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -8,22 +8,7 @@
 <p>
   Thank you for droppin' by!
   <br>
-  <br>
-  I am sure you are curious by now what this app is all about. 
-  Well, guess what? I did it! 
-  <br>  
-  Yup, you read it right. This is my awesome blog project. So I started learning Ruby on Rails. 
-  <br>  
-  <br>
-  Quite a challenge, an interesting adventure I could say.
+  [write something about yourself.]
   <br>
   <br>
-  My name is Mari Sato!  <br> It's nice to meet you by the way.
-  <br>
-  -- About Mari
-  <br>
-  <br>
-  Thanks for reading.
-  <br>
-  Let's keep in touch. Click CONTACT to learn how to reach me. 
 </p>
